<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="185dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="26dp"
        android:text="@string/text1"
        android:textColor="#000000"
        android:textSize="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="18dp"
        android:layout_marginRight="18dp"
        android:layout_marginBottom="428dp"
        android:background="@drawable/button"
        android:text="@string/text2"
        android:textColor="#FFFFFF"
        android:textSize="16dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="53dp"
        android:background="#8B8989"></View>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="65dp"
        android:layout_marginBottom="168dp"
        android:text="@string/text3"
        android:textColor="#000000"
        android:textSize="16dp" />

    <TextView
        android:layout_width="177dp"
        android:layout_height="25dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="205dp"
        android:layout_marginLeft="205dp"
        android:layout_marginTop="64dp"
        android:text="@string/text4"
        android:textColor="#8B8989"
        android:textSize="16dp" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="97dp"
        android:background="#8B8989"></View>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="105dp"
        android:layout_marginBottom="168dp"
        android:text="@string/text5"
        android:textColor="#000000"
        android:textSize="16dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="177dp"
        android:layout_height="25dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="206dp"
        android:layout_marginLeft="206dp"
        android:layout_marginTop="106dp"
        android:text="@string/text4"
        android:textColor="#8B8989"
        android:textSize="16dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="137dp"
        android:background="#8B8989"></View>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="146dp"
        android:layout_marginBottom="168dp"
        android:text="@string/text6"
        android:textColor="#000000"
        android:textSize="16dp" />

    <TextView
        android:layout_width="179dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="205dp"
        android:layout_marginLeft="205dp"
        android:layout_marginTop="147dp"
        android:text="@string/text4"
        android:textColor="#8B8989"
        android:textSize="16dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="177dp"
        android:background="#8B8989"></View>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="185dp"
        android:layout_marginBottom="168dp"
        android:text="@string/text7"
        android:textColor="#000000"
        android:textSize="16dp" />

    <TextView
        android:layout_width="179dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="205dp"
        android:layout_marginLeft="205dp"
        android:layout_marginTop="184dp"
        android:text="@string/text8"
        android:textColor="#8B8989"
        android:textSize="16dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="213dp"
        android:background="#8B8989"></View>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="219dp"
        android:layout_marginBottom="168dp"
        android:text="@string/text9"
        android:textColor="#000000"
        android:textSize="16dp" />

    <ImageView
        android:layout_width="182dp"
        android:layout_height="255dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="13dp"
        android:layout_marginLeft="13dp"
        android:layout_marginTop="330dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="0dp"
        android:src="@drawable/img1" />

    <ImageView
        android:layout_width="182dp"
        android:layout_height="255dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="330dp"
        android:layout_marginEnd="18dp"
        android:layout_marginRight="18dp"
        android:layout_marginBottom="0dp"
        android:src="@drawable/img0" />


    </RelativeLayout>